Add queue drilldown for running jobs
